codepkg/objects/Project_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Budget</label>
        <referenceTo>Project_Budget__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site_Table_Name__c</fullName>
        <description>Used in metadata configuration for dynamic name of table.</description>
        <formula>Project_Site__r.Name+&apos;: Project Site Cost Estimate - &apos;+  Project_Site__r.Name_of_Property_Owner__c</formula>
        <label>Project Site Table Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Project Costs</relationshipLabel>
        <relationshipName>Project_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Award</fullName>
                </value>
                <value>
                    <fullName>Staff Time</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Equipment Expenses</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Indirect Costs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Cost</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Project Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Costs</pluralLabel>
    <recordTypes>
        <fullName>Management_Cost</fullName>
        <active>true</active>
        <label>Management Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Site</fullName>
        <active>true</active>
        <label>Project Site</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>